[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "epochrony"
version = "0.0.0"
description = "Time and date scheduling service"
readme = "README.md"
requires-python = ">=3.8"

authors = [{ name = "Voquis Limited", email = "opensource@voquis.com" }]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
dev = [
  'black',
  'build',
  'flake8',
  'pylint',
  'pytest',
  'pytest-cov',
  'twine'
]

[project.urls]
Homepage = "https://github.com/voquis/epochrony"
Issues = "https://github.com/voquis/epochrony/issues"
